# Telegram-Ultra-Backup

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  MIGRATION_GUIDE_v1.1.md  README.md  RELEASE_NOTES.md  SECURITY.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
admin/: app.py  auth.py  dashboard.py
admin-panel/: app.py  requirements.txt
admin-panel/templates/: dashboard.html
admin/templates/: dashboard.html  login.html
bot/: cleanup.py  cloud.py  database.py  handlers.py  keyboards.py  logger.py  main.py  utils.py
bot/translations/: ar.json  de.json  en.json  es.json  fa.json  fr.json  hi.json  it.json  ja.json  ko.json  pt.json  ru.json  tr.json  zh.json
docs/: INSTALLATION.md  USER_GUIDE.md
tests/: test_database.py  test_main.py
