[tool.poetry]
name = "telegram-ultra-backup"
version = "1.0.0"
description = "Secure multilingual Telegram backup bot"
authors = ["Your Name <your@email.com>"]

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^2.23"
SQLAlchemy = "^1.4"
Flask = "^2.3"
PyJWT = "^2.8"
python-dotenv = "^1.0"
boto3 = "^1.34"
pytz = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
